--- a/requestTest/test.html
+++ b/requestTest/test.html
@@ -15,10 +15,21 @@
       //     console.log(response);
       // }
 
+      //   axios
+      //     .post("http://localhost:8080/catproject/cat")
+      //     .then(function (response) {
+      //       console.log(response.data);
+      //     })
+      //     .catch(function (error) {
+      //       console.log(error);
+      //     });
+      data = { command: "GetCatInfo", catId: 1 };
       axios
-        .post("http://localhost:8080/catproject/cat")
+        .get("http://localhost:8080/cat/cat", {
+          params: data,
+        })
         .then(function (response) {
-          console.log(response.data);
+          console.log(response);
         })
         .catch(function (error) {
           console.log(error);
